--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,10 @@
       <!-- injector:css -->
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/curs/curs.css">
+      <link rel="stylesheet" href="app/grupa/grupa.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/myDirective/myDirective.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
@@ -69,15 +72,22 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="components/auth/auth.service.js"></script>
+      <script src="app/main/main.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/controller/controller.controller.js"></script>
+      <script src="app/curs/curs.controller.js"></script>
+      <script src="app/curs/curs.js"></script>
+      <script src="app/grupa/grupa.controller.js"></script>
+      <script src="app/grupa/grupa.js"></script>
       <script src="app/main/main.controller.js"></script>
-      <script src="app/main/main.js"></script>
-      <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/myDirective/myDirective.directive.js"></script>
+      <script src="app/myFilter/myFilter.filter.js"></script>
+      <script src="app/account/settings/settings.controller.js"></script>
+      <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
