--- a/client/app/curs/curs.html
+++ b/client/app/curs/curs.html
@@ -1,42 +1,92 @@
 <navbar></navbar>
-
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Adaugare curs</h1>
+      <h1>Curs</h1>
     </div>
+
     <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="vm.register(form)" novalidate>
+      <form class="form" name="form" ng-submit="adauga(form)" novalidate>
+        <div class="row">
 
-        <div class="form-group" ng-class="{ 'has-success': form.name.$valid && vm.submitted,
-                                            'has-error': form.name.$invalid && vm.submitted }">
-          <label>Denumire curs</label>
+          <div class="form-group col-sm-4" ng-class="{ 'has-success': form.denumireCurs.$valid && submitted,
+                                            'has-error': form.denumireCurs.$invalid && submitted }">
+            <label>Denumire Curs</label>
 
-          <input type="text" name="name" class="form-control" ng-model="vm.curs.denumireCurs"
-                 required/>
-          <p class="help-block" ng-show="form.name.$error.required && vm.submitted">
-            Denumirea cursului e obligatorie
-          </p>
+            <input type="text" name="denumireCurs" class="form-control" ng-model="curs.denumireCurs"
+                   required/>
+            <p class="help-block" ng-show="form.denumireCurs.$error.required && submitted">
+              Denumirea cursului este necesara
+            </p>
+          </div>
+
+          <div class="form-group col-sm-2" ng-class="{ 'has-success': form.nrOre.$valid && submitted,
+                                            'has-error': form.nrOre.$invalid && submitted }">
+            <label>Numar ore</label>
+
+            <input type="number" name="nrOre" class="form-control" ng-model="curs.nrOre"
+                   required/>
+            <p class="help-block" ng-show="form.nrOre.$error.required && submitted">
+              Numarul de ore este necesar
+            </p>
+          </div>
+
+          <div class="form-group col-sm-2">
+            <label>Pret Intreg</label>
+            <input type="number" name="pretIntreg" class="form-control" ng-model="curs.pretIntreg"/>
+          </div>
+
+          <div class="form-group col-sm-2">
+            <label>Pret Rate</label>
+            <input type="number" name="pretRate" class="form-control" ng-model="curs.pretRate"/>
+          </div>
+
+          <div class="form-group col-sm-2">
+            <label>Numar Rate</label>
+            <input type="number" name="nrRate" class="form-control" ng-model="curs.nrRate"/>
+          </div>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.email.$valid && vm.submitted,
-                                            'has-error': form.email.$invalid && vm.submitted }">
-          <label>Numar Ore</label>
-
-          <input type="email" name="email" class="form-control" ng-model="vm.curs.nrOre"
-                 />
-        </div>
-
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-register" type="submit">
-            Sign up
+        <div class="row col-sm-12">
+          <button ng-disabled="updateFlag" class="btn btn-inverse btn-lg" type="submit">
+            Adauga
+          </button>
+          <button ng-disabled="updateFlag" class="btn btn-default btn-lg" type="button" ng-click="cauta()">
+            Cauta
+          </button>
+          <button ng-show="updateFlag" class="btn btn-default btn-lg" type="button" ng-click="salveaza_modificari()">
+            Modifica
           </button>
         </div>
-
       </form>
     </div>
   </div>
-  <hr>
-</div>
 
+  <div class="container" style="padding-top: 50px">
+    <table class="table">
+      <thead>
+      <tr>
+        <th>Denumire Curs</th>
+        <th>Numar Ore </th>
+        <th>Pret Intreg</th>
+        <th>Pret Rate</th>
+        <th>Numar Rate</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="c in lista">
+        <td class="col-sm-2"> {{c.denumireCurs}}</td>
+        <td class="col-sm-2"> {{c.nrOre}}</td>
+        <td class="col-sm-2">{{c.pretIntreg}}</td>
+        <td class="col-sm-1">{{c.pretRate}}</td>
+        <td class="col-sm-1"> {{c.nrRate}}</td>
+        <td class="col-sm-1">
+          <button class="glyphicon glyphicon-remove" ng-click="sterge(c._id)"></button>
+          <button class="glyphicon glyphicon-pencil" ng-click="modifica(c._id)"></button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+</div>
