--- a/client/app/contract/contract.html
+++ b/client/app/contract/contract.html
@@ -1,2 +1,106 @@
 <navbar></navbar>
-<div>This is the contract view.</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Contract</h1>
+    </div>
+
+    <div class="col-sm-12">
+      <form class="form" name="form" ng-submit="adauga(form)" novalidate>
+        <div class="row">
+          <div class="form-group col-sm-4" ng-class="{ 'has-success': form.numeCursant.$valid && submitted,
+                                            'has-error': form.numeCursant.$invalid && submitted }">
+            <label>Cursant</label>
+
+            <input type="text" ng-model="contract.numeCursant" placeholder="Cursanti"
+                   typeahead="c for c in getCursanti($viewValue)" typeahead-loading="loadingLocations"
+                   class="form-control" typeahead-on-select="selectCursanti($item, $model, $label)"
+                   name="numeCursant" required>
+
+            <p class="help-block" ng-show="form.numeCursant.$error.required && submitted">
+              Cursantul este necesar
+            </p>
+          </div>
+
+          <div class="form-group col-sm-4" ng-class="{ 'has-success': form.numeGrupa.$valid && submitted,
+                                            'has-error': form.numeGrupa.$invalid && submitted }">
+            <label>Grupa</label>
+
+            <input type="text" ng-model="contract.numeGrupa" placeholder="Grupe"
+                   typeahead="c for c in getGrupe($viewValue)" typeahead-loading="loadingLocations"
+                   class="form-control" typeahead-on-select="selectGrupe($item, $model, $label)"
+                   name="numeGrupa" required>
+
+            <p class="help-block" ng-show="form.numeGrupa.$error.required && submitted">
+              Grupa este necesara
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="form-group col-sm-2" ng-class="{ 'has-success': form.nrContract.$valid && submitted,
+                                            'has-error': form.nrContract.$invalid && submitted }">
+            <label>Numar contract</label>
+
+            <input type="number" name="nrContract" class="form-control" ng-model="contract.nrContract"
+                   required/>
+            <p class="help-block" ng-show="form.nrContract.$error.required && submitted">
+              Numar contract este necesar
+            </p>
+          </div>
+
+          <div class="form-group col-sm-3" ng-class="{ 'has-success': form.dataContract.$valid && submitted,
+                                            'has-error': form.dataContract.$invalid && submitted }">
+            <label>Data Contract</label>
+            <input type="date" class="form-control" datepicker-popup ng-model="contract.dataContract" name="dataContract"
+                   datepicker-options="dateOptions">
+          </div>
+
+          <div class="form-group col-sm-4">
+            <label>Discount</label>
+            <input type="number" name="discount" class="form-control" ng-model="contract.discount"/>
+          </div>
+        </div>
+
+        <div class="row col-sm-12">
+          <button ng-disabled="updateFlag" class="btn btn-inverse btn-lg" type="submit">
+            Adauga
+          </button>
+          <button ng-disabled="updateFlag" class="btn btn-default btn-lg" type="button" ng-click="cauta()">
+            Cauta
+          </button>
+          <button ng-show="updateFlag" class="btn btn-default btn-lg" type="button" ng-click="salveaza_modificari()">
+            Modifica
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="container" style="padding-top: 50px">
+    <table class="table">
+      <thead>
+      <tr>
+        <th>Cursant</th>
+        <th>Grupa</th>
+        <th>Numar Contract</th>
+        <th>Data Contract</th>
+        <th>Discount</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="c in lista">
+        <td class="col-sm-2"> {{c.numeCursant}}</td>
+        <td class="col-sm-2"> {{c.numeGrupa}}</td>
+        <td class="col-sm-2"> {{c.nrContract}}</td>
+        <td class="col-sm-2">{{c.dataContract | date}}</td>
+        <td class="col-sm-1">{{c.discount}}</td>
+        <td class="col-sm-1">
+          <button class="glyphicon glyphicon-remove" ng-click="sterge(c._id)"></button>
+          <button class="glyphicon glyphicon-pencil" ng-click="modifica(c._id)"></button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
+</div>
