--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,24 +2,38 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>RGB Photography</h1>
+    <p ng-show="main.isLoggedIn()" class="lead">Situatia Inscrierilor</p>
+    <img ng-hide="main.isLoggedIn()" src="assets/images/rgb.jpg" alt="RGB Photography">
   </div>
 </header>
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+    <div ng-show="main.isLoggedIn()" class="col-lg-12">
+      <table class="table">
+        <thead>
+        <tr>
+          <th>Curs</th>
+          <th>Grupa</th>
+          <th>Data Start</th>
+          <th>Locuri Ocupate</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="c in main.lista">
+          <td class="col-sm-2"> {{c.denumireCurs}}</td>
+          <td class="col-sm-2"> {{c.nrGrupa}}</td>
+          <td class="col-sm-2">{{c.dataStart | date}}</td>
+          <td class="col-sm-1">{{c.locuriOcupate}}</td>
+        </tr>
+        </tbody>
+      </table>
     </div>
     <div class="col-lg-12">
-      
+
     </div>
   </div>
 </div>
 
-<footer></footer>
+<!--<footer></footer>-->
