--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -18,6 +18,7 @@
           <th>Grupa</th>
           <th>Data Start</th>
           <th>Locuri Ocupate</th>
+          <th>Locuri Total</th>
         </tr>
         </thead>
         <tbody>
@@ -26,6 +27,7 @@
           <td class="col-sm-2"> {{c.nrGrupa}}</td>
           <td class="col-sm-2">{{c.dataStart | date}}</td>
           <td class="col-sm-1">{{c.locuriOcupate}}</td>
+          <td class="col-sm-1">{{c.nrLocuri}}</td>
         </tr>
         </tbody>
       </table>
